# incuversi

./: .gitignore  Cargo.toml  ReadMe.md
.github/workflows/: rust.yml
src/: argument.rs  bitboard.rs  cassio.rs  cassiorunner.rs  data_loader.rs  incubator.rs  main.rs  ruversirunner.rs
tools/: cassioconfig.txt  prepare.ps1  prepare.sh  ruversiconfig.txt
